--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Samir AI</title>
+    <title>Sam AI</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
@@ -16,36 +16,48 @@
     </div>
 
     <div class="chat-body">
+
         {% if answer %}
-        <div class="ai-message">
-            <span class="ai-name">Sam AI</span>
-            <pre>{{ answer }}</pre>
-        </div>
+            <div class="ai-message">
+                <span class="ai-name">Sam AI</span>
+
+                {% if is_image %}
+                    <img src="{{ answer }}"
+                         style="max-width:100%; border-radius:10px; margin-top:10px;">
+                    <br><br>
+                    <a href="{{ answer }}" target="_blank">⬇️ Download Image</a>
+                {% else %}
+                    <pre>{{ answer }}</pre>
+                {% endif %}
+
+            </div>
         {% else %}
-        <div class="empty-state">
-            Ask me anything related to study ✨
-        </div>
+            <div class="empty-state">
+                Ask me anything ✨<br>
+                You can also ask for diagrams & images 🖼️
+            </div>
         {% endif %}
+
     </div>
 
     <form method="POST" class="chat-input">
-        <textarea id="questionBox" name="question" placeholder="Type your question here..." required></textarea>
-
+        <textarea id="questionBox" name="question"
+                  placeholder="Type your question or ask for image..."
+                  required></textarea>
         <button type="submit">➤</button>
     </form>
 
 </div>
+
 <script>
 const textarea = document.getElementById("questionBox");
-
 textarea.addEventListener("keydown", function (e) {
     if (e.key === "Enter" && !e.shiftKey) {
-        e.preventDefault();          // new line roke
-        this.form.submit();          // form submit
+        e.preventDefault();
+        this.form.submit();
     }
 });
 </script>
-
 
 </body>
 </html>
