--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
     <div class="chat-header">
         <h1>🤖 Sam AI</h1>
         <p>Your Personal Study Assistant</p>
-        <span class="creator">Created by Samir Singh</span>
         <a href="/clear" style="font-size:12px; color:#a78bfa; text-decoration:none;">
             🗑️ Clear Chat
         </a>
@@ -78,6 +77,9 @@
     </form>
 
 </div>
+    <div>
+        <span class="creator">Created by Samir Singh</span>
+    </div>
 
 <!-- ENTER TO SEND -->
 <script>
